--- a/package.json
+++ b/package.json
@@ -5,21 +5,13 @@
   "main": "index.html",
   "scripts": {
     "build": "webpack -p",
-    "start": "webpack --watch",
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gmoralesc/gmoralesc.github.io.git"
   },
-  "keywords": [
-    "Gustavo",
-    "Morales",
-    "Web",
-    "Developer",
-    "JavaScript",
-    "Rails"
-  ],
   "author": "Gustavo Morales <gustavo.morales@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -32,6 +24,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
